--- a/logger/build.gradle
+++ b/logger/build.gradle
@@ -23,3 +23,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
+
+apply from: '../gradle/bintray.gradle'
