--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$supportVersion"
 //    implementation project(':logger')
-    implementation 'com.henley.logger:logger:1.0.0'
+    implementation 'com.henley.android:logger:1.0.0'
 }
